[project]
dependencies = [
  "lxml>=5.4.0",
  "pydantic>=2.11.7",
  "pytest>=8.4.1",
  "tableaudocumentapi>=0.11",
]
description = "Add your description here"
name = "tabtest"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[dependency-groups]
dev = [
  "mypy>=1.16.1",
  "pre-commit>=4.2.0",
  "ruff>=0.12.0",
]

[tool.ruff]
exclude = [
  "tests/assets",
  ".venv",
  "__pycache__",
]
fix = true
line-length = 100
target-version = "py312"

[tool.ruff.lint]
ignore = ["D203", "D212", "D100"]
select = ["E", "F", "I", "D"]

[tool.mypy]
exclude = [
  "tests/*",
  "examples/*",
]
ignore_missing_imports = true
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
addopts = "-ra -q" 
minversion = "6.0" # Minimum pytest version required
testpaths = [
  "tests",
]
