[project]
dependencies = [
  "lxml>=5.4.0",
  "pydantic>=2.11.7",
  "pytest>=8.4.1",
]
description = "Add your description here"
name = "tabtest"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*"]
include = ["tabtest*"]

[dependency-groups]
dev = [
  "bump2version>=1.0.1",
  "mypy>=1.16.1",
  "pre-commit>=4.2.0",
  "ruff>=0.12.0",
]

[tool.ruff]
exclude = [
  "tests/assets",
  ".venv",
  "__pycache__",
]
fix = true
line-length = 100
target-version = "py312"

[tool.ruff.lint]
ignore = ["D203", "D212", "D100"]
select = ["E", "F", "I", "D"]

[tool.mypy]
exclude = [
  "tests/*",
]
ignore_missing_imports = true
python_version = "3.12"
strict = false

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pydantic.BaseModel"

[tool.pytest.ini_options]
addopts = "-ra -q" 
minversion = "6.0" # Minimum pytest version required
testpaths = [
  "tests",
]
